# My3DGame

./: .gitignore  .gitmodules  CMakeLists.txt
game/: CMakeLists.txt
game/include/Game/: Cube.h  Level.h  Object.h  Player.h
game/src/: Cube.cpp  Level.cpp  Object.cpp  Player.cpp  main.cpp
res/tidus/: High Poly Tidus.mtl
shaders/: basic.frag  basic.vert  texture.frag  texture.vert
